# python3_poetry

./: .gitignore  LICENSE  README.md  check_and_test.sh  pyproject.toml
python3_poetry/: __init__.py
tests/: test_python3_poetry.py
